2017-10-23  Bruno Haible  <bruno@clisp.org>

	Make intparam.c compile with g++ >= 6.
	Reported by Sam Steingold at <https://sourceforge.net/p/clisp/bugs/709>.
	* intparam.c (main9, get_stack_direction): Don't use the C keyword
	'auto'.

2017-10-22  Bruno Haible  <bruno@clisp.org>

	Avoid link errors when passing -DNO_ARI_ASM or -DNO_SP_ASM in CPPFLAGS.
	* makemake.in (ARI_ASMD, ARI_ASMS): Test whether XCFLAGS or XCPPFLAGS
	contains -DNO_ARI_ASM. Don't test for --enable-portability directly.
	(SP_ASMS, SP_ASMD): Test whether XCFLAGS or XCPPFLAGS contains
	-DNO_SP_ASM. Don't test for --enable-portability directly.

2017-10-22  Bruno Haible  <bruno@clisp.org>

	Improve decision whether to use symbolflags or not.
	* lispbibl.d (oint_symbolflags_shift, NO_symbolflags): Define depending
	on sizeof_symbol_is_multiple_of_varobject_alignment and alignment_long.

2017-10-22  Bruno Haible  <bruno@clisp.org>

	Improve decision whether to require varobject_alignment for symbols.
	* lispbibl.d (MAP_MEMORY_TABLES): Move up.
	(varobject_alignment): Add comment.
	(sizeof_symbol_is_multiple_of_varobject_alignment): New macro.
	(symbol_): Add filler word if necessary to ensure appropriate size.
	Define 'symbol_has_symfiller' if so.
	* constsym.d (LISPSYM_B): Test 'symbol_has_symfiller'. Define through
	auxiliary macros SYM_VAROBJECT_HEADER_INIT1, SYM_VAROBJECT_HEADER_INIT2,
	SYM_SYMFILLER_INIT, SYM_TLS_INDEX_INIT.

2017-10-22  Bruno Haible  <bruno@clisp.org>

	Clarify which compilers can align global variables.
	* lispbibl.d (HAVE_GLOBAL_VAR_ALIGN): New macro.
	* spvwtabf.d (subr_tab_data): Mention it in comment.
	* spvwtabs.d (symbol_tab_data): Likewise.

2017-10-22  Bruno Haible  <bruno@clisp.org>

	Avoid redefinition warnings.
	* lispbibl.d (TYPECODES, KERNELVOID32_HEAPCODES, GENERIC64_HEAPCODES,
	HEAPCODES, SINGLEMAP_MEMORY, GENERATIONAL_GC): Don't define if already
	defined.

2017-10-19  Bruno Haible  <bruno@clisp.org>
